--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: dkrue code
-email: your-email@example.com
+name: Dan Krueger
+email: example@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  From Arduino to XML, this is my space for code snippets and technical solutions of value to other developers and myself.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: dkrue
 github_username:  dkrue
 
 # Build settings
