--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: dkrue code
-name: Dan Krueger
-email: example@example.com
+author: Dan Krueger
 description: >- # this means to ignore newlines until "baseurl:"
-  From Arduino to XML, this is my space for code snippets and technical solutions of value to other developers and myself.
+  From Arduino to XML, this is my space for code snippets and technical solutions of value to developers, enthusiasts, and myself.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  dkrue
+url: "https://dkrue.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: dkrue
 
 # Build settings
 markdown: kramdown
