--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: dkrue code
 author: Dan Krueger
 description: >- # this means to ignore newlines until "baseurl:"
-  From Arduino to XML, this is my space for code snippets and technical solutions of value to developers, enthusiasts, and myself.
+  Code snippets and technical solutions of value to developers, enthusiasts, and myself.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dkrue.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: dkrue
